# artifactsmmorust

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
src/: main.rs
src/app/: mod.rs
src/app/api/: mod.rs
src/app/api/bank/: mod.rs
src/app/api/characters_api/: mod.rs
src/app/api/map/: mod.rs
src/app/api/models/: mod.rs
src/app/characters/: mod.rs
src/app/characters/actions/: fight.rs  gathering.rs  mod.rs
src/app/characters/behaviors/: mod.rs  rustboy.rs  scalaman.rs  ulquiche.rs
src/app/characters/infos/: mod.rs
src/app/map/: mod.rs
src/app/map/infos/: mod.rs
src/app/services/: can_craft_impl.rs  can_deposit_item_impl.rs  can_fight_impl.rs  can_gathering_impl.rs  can_get_bank.rs  can_move_impl.rs  can_withdraw_item_impl.rs  mod.rs
src/core/: mod.rs
src/core/behaviors/: mod.rs
src/core/behaviors/crafting/: mod.rs
src/core/behaviors/deposit_bank/: mod.rs
src/core/behaviors/fight/: mod.rs
src/core/behaviors/gathering/: mod.rs
src/core/behaviors/go_deposit_bank/: mod.rs
src/core/behaviors/go_infinit_gathering/: mod.rs
src/core/behaviors/go_inifinit_fight/: mod.rs
src/core/behaviors/infinit_craft/: mod.rs
src/core/behaviors/infinit_fight/: events.rs  mod.rs  states.rs
src/core/behaviors/infinit_gathering/: mod.rs  states.rs
src/core/behaviors/moving/: mod.rs
src/core/characters/: mod.rs
src/core/errors/: mod.rs
src/core/services/: can_craft.rs  can_deposit_item.rs  can_fight.rs  can_gathering.rs  can_get_bank.rs  can_move.rs  can_withdraw_item.rs  mod.rs
src/core/shared/: api_models.rs  mod.rs
(+4 files in other folders)
