[package]
name = "artifactsmmorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"